--- a/drivers/staging/qcacld-3.0/Kbuild
+++ b/drivers/staging/qcacld-3.0/Kbuild
@@ -47,24 +47,7 @@ include $(WLAN_CFG_OVERRIDE_FILE)
 $(warning "Overriding WLAN config with: $(shell cat $(WLAN_CFG_OVERRIDE_FILE))")
 endif
 
-OBJS :=
-OBJS_DIRS :=
-
-define add-wlan-objs
-$(eval $(_add-wlan-objs))
-endef
-
-define _add-wlan-objs
-  ifneq ($(2),)
-    ifeq ($(KERNEL_SUPPORTS_NESTED_COMPOSITES),y)
-      OBJS_DIRS += $(dir $(2))
-      OBJS += $(1).o
-      $(1)-y := $(2)
-    else
-      OBJS += $(2)
-    endif
-  endif
-endef
+include $(WLAN_ROOT)/configs/$(patsubst "%",%,$(CONFIG_QCA_CLD_WLAN_PROFILE))_defconfig
 
 ############ UAPI ############
 UAPI_DIR :=	uapi
