--- a/drivers/staging/qcacld-3.0/configs/default_defconfig
+++ b/drivers/staging/qcacld-3.0/configs/default_defconfig
@@ -154,13 +154,6 @@ ifeq (y,$(findstring y,$(CONFIG_ICNSS) $(CONFIG_ICNSS_MODULE) $(CONFIG_ICNSS2_HE
 	endif
 endif
 
-DEVELOPER_DISABLE_BUILD_TIMESTAMP := y
-ifneq ($(DEVELOPER_DISABLE_BUILD_TIMESTAMP), y)
-ifneq ($(WLAN_DISABLE_BUILD_TAG), y)
-CONFIG_BUILD_TAG := y
-endif
-endif
-
 ifeq ($(CONFIG_ARCH_MDM9630), y)
 CONFIG_MOBILE_ROUTER := y
 endif
@@ -249,7 +242,7 @@ endif
 	CONFIG_WLAN_DUMP_IN_PROGRESS := y
 endif
 
-CONFIG_WLAN_POWER_DEBUG := n
+CONFIG_WLAN_POWER_DEBUG := y
 
 #Disable Beacon Reception Stats
 CONFIG_FEATURE_BECN_STATS := n
@@ -992,7 +985,7 @@ CONFIG_HDD_INIT_WITH_RTNL_LOCK := y
 CONFIG_WLAN_CONV_SPECTRAL_ENABLE := y
 CONFIG_WLAN_SPECTRAL_ENABLE := y
 CONFIG_WMI_CMD_STRINGS := y
-CONFIG_FEATURE_MONITOR_MODE_SUPPORT := y
+CONFIG_FEATURE_MONITOR_MODE_SUPPORT := n
 CONFIG_WLAN_ALLOCATE_GLOBAL_BUFFERS_DYNAMICALLY := n
 CONFIG_WLAN_FEATURE_TWT := y
 CONFIG_FW_THERMAL_THROTTLE := y
@@ -1218,3 +1211,6 @@ CONFIG_WLAN_FEATURE_CAL_FAILURE_TRIGGER := y
 ifeq ($(CONFIG_CNSS_SM6150), y)
 CONFIG_ENABLE_LOW_POWER_MODE := y
 endif
+
+# Disable DFS channels on AP mode to avoid DFS CAC
+CONFIG_FEATURE_WLAN_STA_AP_MODE_DFS_DISABLE := y
